5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1630_2944.log
== TEST (2019-04-02 16:14:04) 
-- CODE:
float(input("Insira o numero de panquecas:")

print(1/7)
-- ERROR:
File "XXXX", line 3
    print(1/7)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:19) 
-- CODE:


print(1/7)
-- OUTPUT:
0.14285714285714285
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:34) 
-- CODE:


print(7/8)
-- OUTPUT:
0.875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:16:32) 
-- CODE:
P=float(input("Insira o numero de panquecas:")
O= 8/7
L= 180
F= 110

print(O)


-- ERROR:
File "XXXX", line 2
    O= 8/7
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:16:39) 
-- CODE:
P=float(input("Insira o numero de panquecas:")
O =  8/7
L= 180
F= 110

print(O)


-- ERROR:
File "XXXX", line 2
    O =  8/7
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:16:46) 
-- CODE:
P=float(input("Insira o numero de panquecas:"))
O =  8/7
L= 180
F= 110

print(O)


-- OUTPUT:
1.1428571428571428
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:01) 
-- CODE:
P=float(input("Insira o numero de panquecas:"))
O =  7/8
L= 180
F= 110

print(O)


-- OUTPUT:
0.875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:17:50) 
-- CODE:
P=float(input("Insira o numero de panquecas:"))
O =  P/8
L= P/180
F= P/110

print(O)
print(L)
print(F)


-- OUTPUT:
0.5
0.022222222222222223
0.03636363636363636
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:18:04) 
-- CODE:
P=float(input("Insira o numero de panquecas:"))
O =  P/8
L= 180/7
F= P/110

print(O)
print(L)
print(F)


-- OUTPUT:
0.5
25.714285714285715
0.03636363636363636
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:21:52) 
-- CODE:
P=float(input("Insira o numero de panquecas:"))
O =  P/8
L= 180/8
F= P/110

print(O)
print(L)
print(F)


-- OUTPUT:
0.5
22.5
0.03636363636363636
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:08) 
-- CODE:
P=float(input("Insira o numero de panquecas:"))
O =  P/8
L= 180*P/8
F= P/110

print(O)
print(L)
print(F)


-- OUTPUT:
0.5
90.0
0.03636363636363636
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:35) 
-- CODE:
P=float(input("Insira o numero de panquecas:"))
O =  P/8
L= 180*P/8
F= 110*P/8

print(O)
print(L)
print(F)


-- OUTPUT:
0.5
90.0
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:22:41) 
-- CODE:
P=float(input("Insira o numero de panquecas:"))
O =  P/8
L= 180*P/8
F= 110*P/8

print(O)
print(L)
print(F)


-- EXECUTION TIME:
0.250864
-- TEST CASE 1:
---- input:
4
---- correct output:
0.5
90.0
55.0
---- user output:
0.5
90.0
55.0
-- TEST CASE 2:
---- input:
20
---- correct output:
2.5
450.0
275.0
---- user output:
2.5
450.0
275.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 09:26:30) 
-- CODE:
P=float(input("Insira o numero de panquecas:"))
O =  P/8
L= 180*P/8
F= 110*P/8

print(O)
print(L)
print(F)


-- OUTPUT:
0.5
90.0
55.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
